# allarounder

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Makefile  NEXT-STEPS-PROMPT.md  acr-pull-roleassignment-incident-2026-06-26.md  docker-compose.yml  podcast-blog-website.plugin  retrospective-improvements-runbook.md  retrospective-infra-cost-overprovisioning-2026-06-25.md  retrospective-infra-cost-review-2026-06-29.md  retrospective-skills-orchestrator-2026-06-25.md  skills-lock.json
src/backend/: .dockerignore  Dockerfile  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_identity_users_and_refresh_tokens.py  0002_content_articles.py  0003_articles_slug_locked_spotify_url.py  0004_articles_media_seo_fields.py  0005_articles_preview_token.py  0006_categories.py  0007_tags.py  0008_authors.py  0009_guests.py  0010_pages.py
src/backend/app/: main.py  settings.py
src/backend/app/infrastructure/: database.py
src/backend/app/interfaces/api/: health.py
src/backend/cli/: __main__.py
src/backend/tests/: test_domain_purity.py  test_health.py  test_migrations.py  test_proxy_ip.py
src/backend/tests/api/: test_article_lifecycle.py  test_articles.py  test_auth.py  test_authors.py  test_categories.py  test_guests.py  test_media.py  test_pages.py  test_preview.py  test_rbac.py  test_tags.py
src/backend/tests/application/: test_auth_service.py  test_create_article.py  test_lifecycle.py
src/backend/tests/domain/: test_article.py  test_password_policy.py  test_refresh_token.py  test_spotify_url.py  test_user.py
(+192 files in other folders)
